--- a/.github/workflows/tests-before-merging-to-main.yaml
+++ b/.github/workflows/tests-before-merging-to-main.yaml
@@ -15,5 +15,9 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    - name: check linter
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.53
     - name: run tests
       run: go test -v ./...
