--- a/.github/workflows/tests-before-merging-to-main.yaml
+++ b/.github/workflows/tests-before-merging-to-main.yaml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+        cache: false
     - name: check linter
       uses: golangci/golangci-lint-action@v3
       with:
