--- a/.github/workflows/tests-before-merging-to-main.yaml
+++ b/.github/workflows/tests-before-merging-to-main.yaml
@@ -22,3 +22,8 @@ jobs:
         version: v1.53
     - name: run tests
       run: go test -v ./...
+    - name: check coverage
+      run: |
+          go test ./... -coverprofile cover.out &&
+          coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-1)}'` &&
+          if (($coverage > 90)); then exit 0; else exit 1; fi
