--- a/.github/workflows/tests-before-merging-to-main.yaml
+++ b/.github/workflows/tests-before-merging-to-main.yaml
@@ -25,5 +25,4 @@ jobs:
     - name: check coverage
       run: |
           go test ./... -coverprofile cover.out &&
-          coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-1)}'` &&
-          if (($coverage <= 90)); then echo fail; fi
+          coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-1)}'` && if (($coverage <= 90)); then exit 1; fi
