--- a/.github/workflows/tests-before-merging-to-main.yaml
+++ b/.github/workflows/tests-before-merging-to-main.yaml
@@ -23,4 +23,7 @@ jobs:
     - name: run tests
       run: go test -v ./...
     - name: check coverage
-      run: go test ./... -coverprofile cover.out && coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-1)}'` && if (($coverage <= 90)); then exit 1; fi
+      run: |
+          go test ./... -coverprofile cover.out &&
+          coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-2)}'` &&
+          if (($coverage <= 90)); then exit 1; fi
