--- a/.github/workflows/checks-before-merge.yaml
+++ b/.github/workflows/checks-before-merge.yaml
@@ -36,8 +36,8 @@ jobs:
         version: v1.53
     - name: run tests
       run: go test -v ./...
-    # - name: check coverage
-    #   run: |
-    #       go test ./... -coverprofile cover.out &&
-    #       coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-3)}'` &&
-    #       if (($coverage < 70)); then exit 1; fi
+    - name: check coverage
+      run: |
+          go test ./... -coverprofile cover.out &&
+          coverage=`go tool cover -func cover.out | grep total | awk '{print substr($3, 1, length($3)-3)}'` &&
+          if (($coverage < 70)); then exit 1; fi
