--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,19 @@ services:
   #     context: .
   #   env_file:
   #     - .env
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
   db:
     image: postgres
     env_file:
       - .env
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 30s
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
